--- a/index.html
+++ b/index.html
@@ -1,241 +1,25 @@
 <!DOCTYPE html>
-<html lang="ru-RU">
-
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Глаз Бога: официальный сайт поискового сервиса</title>
-    <meta name="description" content="Глаз Бога – это сервис по поиску информации по открытым источникам, который работает через телеграм бот.">
-    <meta name="keywords" content="Глаз Бога, OSINT, онлайн безопасность, поиск информации, фото, телефон, безопасность, информационная безопасность">
+    <title>Проверка</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
-            background-color: #f5f5f5;
-            margin: 0;
-            padding: 0;
-            color: #333;
-        }
-
-        .container {
-            width: 80%;
-            margin: 0 auto;
-            padding: 20px;
-        }
-
-        .header,
-        .content {
             display: flex;
-            justify-content: space-between;
+            justify-content: center;
             align-items: center;
-            margin-bottom: 20px;
+            height: 100vh;
+            margin: 0;
+            background-color: #f0f0f0;
         }
-
-        .header-logo,
-        .button {
-            background-color: #f5f5f5;
-            width: 200px;
-            height: 50px;
-        }
-
-        .index__video,
-        .block__video,
-        .block__image {
-            background-color: #f5f5f5;
-            width: 100%;
-            height: 200px;
-            margin: 20px 0;
-        }
-
-        h1,
-        h2 {
+        h1 {
+            font-size: 50px;
             color: #333;
-        }
-
-        .button {
-            background-color: #f5f5f5;
-            width: 100px;
-            height: 30px;
-            text-align: center;
-            line-height: 30px;
-            margin-top: 10px;
-        }
-
-        .block {
-            margin-bottom: 40px;
-        }
-
-        p {
-            margin-bottom: 10px;
         }
     </style>
 </head>
-
-<body class="home page-template page-template-default page-template-default-php page page-id-2 wp-embed-responsive singular enable-search-modal missing-post-thumbnail has-no-pagination not-showing-comments show-avatars default footer-top-visible">
-    <div id="app">
-        <header>
-            <div class="container">
-                <div class="header content">
-                    <div class="header-logo"></div>
-                    <div class="button button--empty">
-                        <span>Telegram bot</span>
-                    </div>
-                </div>
-            </div>
-        </header>
-
-        <main>
-            <section id="index">
-                <div class="container">
-                    <div class="index content object-wrapper">
-                        <div class="index__main object">
-                            <div class="index__title">
-                                <h1><span>Глаз Бога</span> – самая лучшая <br>поисковая система<br> в телеграме</h1>
-                            </div>
-                            <ul class="index-lead">
-                                <li class="index-lead__item">
-                                    <p>Инновационный фотопоиск</p>
-                                </li>
-                                <li class="index-lead__item">
-                                    <p>Огромная база автомобилей</p>
-                                </li>
-                                <li class="index-lead__item">
-                                    <p>Миллиарды адресов и точек на карте</p>
-                                </li>
-                            </ul>
-                            <div class="index__button">
-                                <div class="button">
-                                    <span>Попробовать</span>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="index__video"></div>
-                    </div>
-                </div>
-            </section>
-
-            <section id="block_1">
-                <div class="container">
-                    <div class="block block--reverse content object-wrapper">
-                        <div class="block__main object">
-                            <div class="block__title">
-                                <h2>Фотопоиск с использованием нейросети</h2>
-                            </div>
-                            <div class="block__text">
-                                <p>Позволяет искать людей и их социальные сети через максимально удобный интерфейс бота. Вы отправляете нам фото, мы возвращаем вам полный скоринг.</p>
-                            </div>
-                        </div>
-                        <div class="block__video"></div>
-                    </div>
-                </div>
-            </section>
-
-            <section id="block_2">
-                <div class="container">
-                    <div class="block content object-wrapper">
-                        <div class="block__main object">
-                            <div class="block__title">
-                                <h2>Автопоиск</h2>
-                            </div>
-                            <div class="block__text">
-                                <p>Наша база насчитывает десятки миллионов автомобилей, ПТС и СТС, собранных из открытых источников.</p>
-                            </div>
-                        </div>
-                        <div class="block__image"></div>
-                    </div>
-                </div>
-            </section>
-
-            <section id="block_3">
-                <div class="container">
-                    <div class="block block--reverse content object-wrapper">
-                        <div class="block__main object">
-                            <div class="block__title">
-                                <h2>Геопоиск</h2>
-                            </div>
-                            <div class="block__text">
-                                <p>Отправьте нам точку на карте, мы покажем всех людей, кто её посещал, или даже тех, кто находится там прямо сейчас.</p>
-                            </div>
-                        </div>
-                        <div class="block__image"></div>
-                    </div>
-                </div>
-            </section>
-
-            <section>
-                <div class="container" style="grid-gap: unset; grid-template-columns: none;">
-                    <h1>Путеводитель в мире открытого источникового разведывания: бот "Глаз Бога"</h1>
-
-                    <section>
-                        <h2>Введение</h2>
-                        <p>
-                            В мире современных технологий доступ к информации – это ключ к успеху. Особенно в сфере открытого источникового разведывания (OSINT), где быстрый доступ к актуальным данным может определить результаты операций и решение критически важных задач. В этом контексте проект "Глаз Бога" представляет собой инновационного бота, который стал незаменимым помощником для профессионалов в области OSINT. Давайте вместе рассмотрим, как "Глаз Бога" может стать вашим надежным партнером в проведении эффективных исследований в сети.
-                        </p>
-                    </section>
-
-                    <section>
-                        <h2>Преимущества и возможности бота "Глаз Бога"</h2>
-
-                        <p><strong>Мониторинг и анализ открытых источников</strong>: "Глаз Бога" способен в реальном времени мониторить и анализировать информацию из различных источников, включая социальные сети, новостные сайты, форумы, блоги и многое другое.</p>
-                        <p><strong>Поиск и категоризация данных</strong>: Благодаря мощным алгоритмам поиска и анализа данных, бот "Глаз Бога" может быстро находить и категоризировать информацию по заданным параметрам, что значительно экономит время и усилия исследователя.</p>
-                        <p><strong>Визуализация результатов</strong>: "Глаз Бога" предоставляет интуитивно понятные инструменты визуализации данных, позволяя анализировать информацию в удобной форме, такой как графики, диаграммы и тепловые карты.</p>
-                        <p><strong>Интеллектуальные аналитические возможности</strong>: Благодаря использованию искусственного интеллекта и машинного обучения, "Глаз Бога" способен предоставлять дополнительные аналитические данные и прогнозы, помогающие принимать обоснованные решения.</p>
-                    </section>
-
-                    <section>
-                        <h2>Примеры использования</h2>
-                        <p>
-                            Давайте рассмотрим несколько практических примеров использования бота "Глаз Бога" в рамках проведения исследований в сфере OSINT:
-                        </p>
-
-                        <p><strong>Мониторинг социальных сетей</strong>: "Глаз Бога" помогает анализировать активность пользователей в социальных сетях, выявлять тренды, определять ключевые персоны и выявлять потенциальные угрозы безопасности.</p>
-                        <p><strong>Анализ новостных источников</strong>: Бот позволяет отслеживать актуальные новости и события, фильтруя информацию по ключевым словам и категориям, а также проводить анализ тональности и реакции общественности.</p>
-                        <p><strong>Мониторинг форумов и обсуждений</strong>: "Глаз Бога" помогает идентифицировать обсуждаемые темы и тренды на форумах и обсуждениях, выявлять мнения и настроения пользователей, а также выявлять потенциальные уязвимости и угрозы.</p>
-                        <p><strong>Исследование конкурентов и рынка</strong>: Бот позволяет анализировать деятельность конкурентов, отслеживать их стратегии и тактику, выявлять тенденции рынка и предсказывать его развитие.</p>
-                    </section>
-
-                    <section>
-                        <h2>Эффективность и результаты</h2>
-                        <p>
-                            Использование бота "Глаз Бога" значительно повышает эффективность и результативность проведения исследований в сети. Сравнительный анализ с традиционными методами показывает следующие преимущества:
-                        </p>
-
-                        <p>Быстрый доступ к информации из различных источников.</p>
-                        <p>Автоматизация процесса сбора и анализа данных.</p>
-                        <p>Повышенная точность и надежность аналитических выводов.</p>
-                        <p>Возможность проведения комплексного мониторинга и анализа.</p>
-                        <p>Улучшенная визуализация результатов и представление информации.</p>
-                        <p>Сокращение времени и затрат на проведение исследований.</p>
-
-                        <p>
-                            В целом, использование "Глаза Бога" позволяет максимально эффективно использовать ресурсы и возможности в области открытого источникового разведывания, что в конечном итоге приводит к более качественным и успешным результатам.
-                        </p>
-                    </section>
-
-                    <section>
-                        <h2>Присоединяйтесь к нам уже сегодня!</h2>
-                        <p>
-                            Не упустите возможность стать частью профессионального сообщества и использовать передовые технологии в сфере открытого источникового разведывания. Подключайтесь к боту "Глаз Бога" уже сегодня и получите доступ к мощному инструментарию для успешного проведения исследований в сети. Не упустите возможность использовать "Глаз Бога" для улучшения ваших навыков и результатов в сфере OSINT. Подключайтесь к нашему боту уже сегодня и откройте для себя новые горизонты в мире информационной разведки!
-                        </p>
-                    </section>
-                </div>
-            </section>
-        </main>
-
-        <footer>
-            <div class="container">
-                <div class="footer content"></div>
-            </div>
-        </footer>
-    </div>
-
-    <script src="js/main.js" id="main-sh-js-js"></script>
-    <script>
-        /(trident|msie)/i.test(navigator.userAgent) && document.getElementById && window.addEventListener && window.addEventListener("hashchange", function() {
-            var t, e = location.hash.substring(1);
-            /^[A-z0-9_-]+$/.test(e) && (t = document.getElementById(e)) && (/^(?:a|select|input|button|textarea)$/i.test(t.tagName) || (t.tabIndex = -1), t.focus())
-        }, !1);
-    </script>
+<body>
+    <h1>РАБОТАЕТ</h1>
 </body>
-
 </html>
-
